--- a/src/main/resources/public/employee-index.html
+++ b/src/main/resources/public/employee-index.html
@@ -8,11 +8,12 @@
     $(document).ready(
             function() {
                 $.ajax({
-                    url : '/employees',
+                    url : '/users',
                     method : 'GET'
                 }).then(
-                        function(employees) {
-                            for (var i = 0; i < employees.length; i++) {
+                        function(data) {
+                        	console.log(data);
+                            /* for (var i = 0; i < employees.length; i++) {
                                 var employee = employees[i];
                                 var row = "<tr><td>" + employee.employeeId
                                         + "</td><td>" + employee.firstname
@@ -22,8 +23,8 @@
                                         + "</td><td>" + employee.active
                                         + "</td></tr>";
                                 $("#result").append(row);
-                            }
-                        });
+                            }*/
+                        }); 
             });
 </script>
 </head>
