populating dev list

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,6 +16,8 @@
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
 	<script src="js/directives/passwordValidation.js"></script>
+	<script src="js/services/getDevsService.js"></script>
+	<script src="js/services/getUsersService.js"></script>
 	
 </head>
 
