working on creating a report front end

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,7 @@
 	<script src="js/directives/passwordValidation.js"></script>
 	<script src="js/services/getDevsService.js"></script>
 	<script src="js/services/getUsersService.js"></script>
+	<script src="js/services/createLineItemService.js"></script>
 	
 </head>
 
