--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,12 +7,13 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
-	<script src="js/auth/auth.js" type="text/javascript"></script>
+
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
+	<script src="js/controllers/loginController.js"></script>
+	<script src="js/auth/auth.js" type="text/javascript"></script>
 	<script src="js/controllers/detailController.js"></script>
 	<script src="js/controllers/homeController.js"></script>
-	<script src="js/controllers/loginController.js"></script>
 	<script src="js/controllers/projectController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
@@ -26,7 +27,7 @@
 	</div>
 	<ul class="nav nav-pills" role="tablist">
 		<li ng-class="{active:tab('home')}"><a href="#/">home</a></li>
-		<li><a href="#/login">login</a></li>
+		<li><a ui-sref="/login">login</a></li>
 		<li ng-show="authenticated()"><a href="" ng-click="logout()">logout</a></li>
 	</ul>
 </body>
