added modular login items from last project.  NON FUNCTIONAL.  Starting new branch from head of Sprint_1

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,8 +10,11 @@
 
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
-	<script src="js/controllers/loginController.js"></script>
-	<script src="js/auth/auth.js" type="text/javascript"></script>
+	<script src="/js/login/login.controller.js" type="text/javascript"></script>
+	<script src="/js/login/login.js" type="text/javascript"></script>
+	<script src="/js/auth/auth.service.js"></script>
+	<script src="/js/auth/authority.directive.js"></script>
+	<script src="/js/auth/principal.service.js"></script>
 	<script src="js/controllers/detailController.js"></script>
 	<script src="js/controllers/homeController.js"></script>
 	<script src="js/controllers/projectController.js"></script>
