--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -20,6 +20,25 @@
 </head>
 
 <body ng-app="expenseApp">
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <div class="a navbar-brand">
+               Expense Report
+            </div>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a ui-sref="home">Home</a>
+                
+            </ul>
+            <ul class = "navbar navbar-nav navbar-right">
+            	<li><a href="/logout">Logout</a>
+            </ul>
+        </div>
+    </div>
+</div>
 	<div id="mainView">
 		<ui-view></ui-view>
 	</div>
