Comments on code

--- a/src/main/resources/public/report-create.html
+++ b/src/main/resources/public/report-create.html
@@ -17,9 +17,11 @@
             report.project = {'projectId': 1},
             report.reportStatus = {'report' : 1};
             
-            var lineItems = {
-           			[
-           				lineItems.value = 25,
+            var lineItems = []
+           			{
+            			value:25
+           			}
+           				
                 	    lineItems.report = {'reportId': 1},
                 	    lineItems.type = {'typeId' : 1};
                 	]	
