Added alternative html/jquery login page.  Need to connect angular to backend

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,7 +11,7 @@
 	<script src="js/routes.js"></script>
 	<script src="js/controllers/detailController.js"></script>
 	<script src="js/controllers/homeController.js"></script>
-	
+	<script src="js/controllers/loginController.js"></script>
 	<script src="js/controllers/projectController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
