--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+
+
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
@@ -7,14 +7,13 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
-	<script src="js/controllers/LoginJs/loginmodule.js"></script>
-	<script src="js/controllers/LoginJs/loginController.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/routes.js"></script>
+<!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
 </head>
 
-<body>
-	<div class="alert alert-danger" ng-show="error">
-	There was a problem logging in. Please try again.
-</div>
+<body ngApp="expenseApp">
+	
 <form role="form" ng-submit="login()">
 	<div class="form-group">
 		<label for="username">Username:</label> <input type="text"
@@ -28,5 +27,29 @@
 </form>
 
 	<button>Register</button>
+	
+	
+	
 </body>
-</html>
+<!-- <html> -->
+<!-- <head lang="en"> -->
+<!--     <meta charset="UTF-8"> -->
+<!--     <title>Login Page</title> -->
+ 
+ 
+<!-- </head> -->
+
+<!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
+<!-- <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script> -->
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
+<!-- <body> -->
+<!-- <div id="error" ></div> -->
+
+<!-- <form id="loginForm" name="loginForm"> -->
+<!--     <label for="username">UserName: </label><br><input id="username" name="username"><br/> -->
+<!--     <label for="password">Password:</label><br><input id="password" name="password" type="password"><br/> -->
+<!--     <br> -->
+<!--     <button type="submit">Login!</button> -->
+<!-- </form> -->
+<!-- <script type="text/javascript" src="./js/loginjq.js"></script> -->
+<!-- </body> -->
