--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -7,14 +7,13 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
-	<script src="js/app.js"></script>
-	<script src="js/routes.js"></script>
-<!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
+
+	
 </head>
 
 <body ngApp="expenseApp">
 	
-<form role="form" ng-submit="login()">
+<form role="form" ng-submit="login()" method="post">
 	<div class="form-group">
 		<label for="username">Username:</label> <input type="text"
 			class="form-control" id="username" name="username" ng-model="credentials.username"/>
@@ -28,28 +27,8 @@
 
 	<button>Register</button>
 	
-	
+	<script src="js/app.js"></script>
+	<script src="js/routes.js"></script>
+	<script src="js/controllers/LoginJs/loginController.js"></script>
 	
 </body>
-<!-- <html> -->
-<!-- <head lang="en"> -->
-<!--     <meta charset="UTF-8"> -->
-<!--     <title>Login Page</title> -->
- 
- 
-<!-- </head> -->
-
-<!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
-<!-- <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script> -->
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
-<!-- <body> -->
-<!-- <div id="error" ></div> -->
-
-<!-- <form id="loginForm" name="loginForm"> -->
-<!--     <label for="username">UserName: </label><br><input id="username" name="username"><br/> -->
-<!--     <label for="password">Password:</label><br><input id="password" name="password" type="password"><br/> -->
-<!--     <br> -->
-<!--     <button type="submit">Login!</button> -->
-<!-- </form> -->
-<!-- <script type="text/javascript" src="./js/loginjq.js"></script> -->
-<!-- </body> -->
