--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -23,9 +23,10 @@
 			class="form-control" id="password" name="password" ng-model="credentials.password"/>
 	</div>
 	<button type="submit" class="btn btn-primary">Submit</button>
+	<button type="submit" class="btn btn-primary">Register</button>
 </form>
 
-	<button>Register</button>
+	
 	
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
