Commented out superfluous script tags in html files, preparing to merge Sprint_1 into this branch to verify functionality.

--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -30,6 +30,7 @@
 	
 	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
-	<script src="js/controllers/LoginJs/loginController.js"></script>
+<!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
+<!-- 	<script src="js/controllers/LoginJs/loginmodule.js"></script> -->
 	
 </body>
