--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -28,8 +28,8 @@
 
 	
 	
-<!-- 	<script src="js/app.js"></script> -->
-<!-- 	<script src="js/routes.js"></script> -->
+	<script src="js/app.js"></script>
+	<script src="js/routes.js"></script>
 <!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
 <!-- 	<script src="js/controllers/LoginJs/loginmodule.js"></script> -->
 	
