--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,6 +19,7 @@
 	<script src="js/services/getDevsService.js"></script>
 	<script src="js/services/getUsersService.js"></script>
 	<script src="js/services/createLineItemService.js"></script>
+  <script src="js/services/getReportService.js"></script>
 	
 </head>
 
