--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -24,6 +24,10 @@
 </head>
 
 <body ng-app="expenseApp">
+	<header>
+			<h1 class="text-center"> Expense Reports</h1>
+			<
+	</header>
 	<div id="mainView">
 		<ui-view></ui-view>
 	</div>
