--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -70,6 +70,7 @@
         
  	<script src="scripts/app/app.js"></script>
     <script src="scripts/app/app.constants.js"></script>
+    <script src="scripts/app/entity.js"></script>
     <script src="scripts/components/auth/auth.service.js"></script>
     <script src="scripts/components/auth/principal.service.js"></script>
     <script src="scripts/components/auth/authority.directive.js"></script>
@@ -117,8 +118,20 @@
     <script src="scripts/app/admin/configuration/configuration.js"></script>
     <script src="scripts/app/admin/configuration/configuration.controller.js"></script>
     <script src="scripts/app/error/error.js"></script>
+    <script src="scripts/app/createreport/createLineItemService.js"></script>
+    <script src="scripts/app/createreport/createreport.js"></script>
+    <script src="scripts/app/createreport/reportController.js"></script>
     <script src="scripts/app/main/main.js"></script>
     <script src="scripts/app/main/main.controller.js"></script>
+    <script src="scripts/app/main/homeview.js"></script>
+    <script src="scripts/app/main/homeController.js"></script>
+    <script src="scripts/app/project/createproject.js"></script>
+    <script src="scripts/app/project/projectController.js"></script>
+    <script src="scripts/app/project/getDevsService.js"></script>
+    <script src="scripts/app/project/getUsersService.js"></script>
+    <script src="scripts/app/viewreport/viewreport.js"></script>
+    <script src="scripts/app/viewreport/getReportService.js"></script>
+    <script src="scripts/app/viewreport/viewreportController.js"></script>
     <script src="scripts/components/auth/services/sessions.service.js"></script>
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
