--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -3,6 +3,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+	<script src="https://code.angularjs.org/1.4.5/angular-route.js"></script> 
 	<link type="text/css" rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="../css/styling.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
