--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Expense Report Project</title>
@@ -15,7 +15,6 @@
 	<script src="js/controllers/detailController.js"></script>
 	<script src="js/controllers/navigationController.js"></script>
 	<script src="js/controllers/homeController.js"></script>
-<!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
 	<script src="js/controllers/projectController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
@@ -26,38 +25,10 @@
   	<script src="js/services/getReportService.js"></script>
 	<script src="js/services/currentUserService.js"></script> 
 	<script src="js/services/getCurrentUserService.js"></script> 
-</head>
 
-<body ng-app='expenseApp'>
-<div class="navbar navbar-inverse navbar-fixed-top" ng-controller="navigationController" >
-    <div class="container">
-        <div class="navbar-header">
-            <div class="a navbar-brand">
-               Expense Report
-            </div>
-        </div>
-        <div class="navbar-collapse collapse" >
-            <ul class="nav navbar-nav">
-                <li>
-                    <a ui-sref="home">Home</a>
-                </li>
-                <li>
-                	<a ui-sref="createReport" ng-show="!admin">Create New Report</a>
-         		</li>
-          		<li>
-           			 <a ui-sref="createProject" ng-show="admin">Create Project</a>
-          		</li>
-             	  
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-             <li><a href="/logout""><span class="glyphicon glyphicon-user"></span> Log Out</a></li>
-             
-    </ul>
-        </div>
-    </div>
-</div>
+<body ng-app="expenseApp">
 	<div id="mainView">
 		<ui-view></ui-view>
-	</div>
+	</div>    
 </body>
 </html>
