--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,15 +28,14 @@
 	<script src="js/services/getCurrentUserService.js"></script> 
 </head>
 
-<body ng-app="expensereportApp">
-	<div ui-view="navbar" ng-cloak=""></div>
+<body ng-app="expenseApp">
     <div class="container">
         <div class="navbar-header">
             <div class="a navbar-brand">
                Expense Report
             </div>
         </div>
-        <div class="navbar-collapse collapse" >
+        <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>
                     <a ui-sref="home">Home</a>
