--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,6 +19,7 @@
 	<script src="js/controllers/projectController.js"></script>
 	<script src="js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
+	<script src="js/controllers/editreportcontroller.js"></script>
 	<script src="js/directives/passwordValidation.js"></script>
 	<script src="js/services/getDevsService.js"></script>
 	<script src="js/services/getUsersService.js"></script>
