--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,6 +10,10 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+	<script src="Login/js/loginApp.js"></script>
+    <script src="Login/js/loginRoutes.js"></script>
+    <script src="Login/js/controllers/loginController.js"></script>
+    <script src="Login/js/controllers/registerController.js"></script>
 	<script src="js/app.js"></script>
     <script src="js/routes.js"></script>
 	<script src="js/controllers/detailController.js"></script>
@@ -17,7 +21,7 @@
 	<script src="js/controllers/homeController.js"></script>
 <!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
 	<script src="js/controllers/projectController.js"></script>
-	<script src="js/controllers/registerController.js"></script>
+	<script src="Login/js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
 	<script src="js/directives/passwordValidation.js"></script>
 	<script src="js/services/getDevsService.js"></script>
@@ -28,7 +32,7 @@
 	<script src="js/services/getCurrentUserService.js"></script> 
 </head>
 
-<body ng-app="expenseApp">
+<body ng-app="loginApp">
 	<div ui-view="navbar" ng-cloak=""></div>
     <div class="container">
         <div class="navbar-header">
