--- a/src/main/resources/public/Login/loginIndex.html
+++ b/src/main/resources/public/Login/loginIndex.html
@@ -14,6 +14,9 @@
     <script src="Login/js/loginRoutes.js"></script>
     <script src="Login/js/controllers/loginController.js"></script>
     <script src="Login/js/controllers/registerController.js"></script>
+    <script src="Login/js/controllers/homeController.js"></script>
+    <script src="Login/js/controllers/reportController.js"></script>
+    <script src="Login/js/controllers/projectController.js"></script>
     
 
 </head>
