--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -40,7 +40,10 @@
         <div class="navbar-collapse collapse" >
             <ul class="nav navbar-nav">
                 <li>
-                    <a ui-sref="home">Home</a>
+                    <a ui-sref="home" ng-show="!admin">Home</a>
+                </li>
+                <li>
+                    <a ui-sref="adminHome" ng-show="admin">Home</a>
                 </li>
                 <li>
                 	<a ui-sref="createReport" ng-show="!admin">Create New Report</a>
