--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,16 +10,11 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
-	<script src="Login/js/loginApp.js"></script>
-    <script src="Login/js/loginRoutes.js"></script>
-    <script src="Login/js/controllers/loginController.js"></script>
-    <script src="Login/js/controllers/registerController.js"></script>
 	<script src="js/app.js"></script>
     <script src="js/routes.js"></script>
 	<script src="js/controllers/detailController.js"></script>
 	<script src="js/controllers/navigationController.js"></script>
 	<script src="js/controllers/homeController.js"></script>
-<!-- 	<script src="js/controllers/LoginJs/loginController.js"></script> -->
 	<script src="js/controllers/projectController.js"></script>
 	<script src="Login/js/controllers/registerController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
@@ -30,37 +25,15 @@
   	<script src="js/services/getReportService.js"></script>
 	<script src="js/services/currentUserService.js"></script> 
 	<script src="js/services/getCurrentUserService.js"></script> 
+	<script src="Login/js/controllers/loginController.js"></script>
+    <script src="Login/js/controllers/registerController.js"></script>
+    <script src="Login/js/controllers/homeController.js"></script>
+    <script src="Login/js/controllers/reportController.js"></script>
+    <script src="Login/js/controllers/projectController.js"></script>
 </head>
 
-<body ng-app="loginApp">
-	<div ui-view="navbar" ng-cloak=""></div>
-    <div class="container">
-        <div class="navbar-header">
-            <div class="a navbar-brand">
-               Expense Report
-            </div>
-        </div>
-        <div class="navbar-collapse collapse" >
-            <ul class="nav navbar-nav">
-                <li>
-                    <a ui-sref="home">Home</a>
-                </li>
-                <li>
-                	<a ui-sref="createReport" ng-show="!admin">Create New Report</a>
-         		</li>
-          		<li>
-           			 <a ui-sref="createProject" ng-show="admin">Create Project</a>
-          		</li>  
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-             <li><a href="/logout""><span class="glyphicon glyphicon-user"></span> Log Out</a></li>      
-    </ul>
-    <div class="well" ui-view="content"></div>
-		<div class="footer">
-        	<p translate="footer" class="text-center">2016 Will Wheaties</p>
-        </div>
-   	</div>
-   	<div>
+<body ng-app="expenseApp">
+	<div>
    		<ui-view></ui-view>
    	</div>
 </body>
