--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,7 @@
 	<script src="js/controllers/projectController.js"></script>
 	<script src="js/controllers/reportController.js"></script>
 	<script src="js/directives/passwordValidation.js"></script>
+	<script src="js/services/authService.js"></script>
 	<script src="js/services/getDevsService.js"></script>
 	<script src="js/services/getUsersService.js"></script>
 	<script src="js/services/createLineItemService.js"></script>
