--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -29,6 +29,7 @@
 	<script src="js/services/currentUserService.js"></script>
 	<script src="js/services/registerService.js"></script> 
 	<script src="js/services/getCurrentUserService.js"></script> 
+	<script src="js/services/getProjectsService.js"></script>
 	<script src="Login/js/controllers/loginController.js"></script>
     <script src="Login/js/controllers/registerController.js"></script>
 
